<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021 AOSP-Krypton Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- App name -->
    <string name="app_name">KOSP Updater</string>

    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>

    <!-- Build info -->
    <string name="refresh">Refresh</string>
    <string name="build_info_title">Current Build Info:</string>
    <string name="device">Device</string>
    <string name="version">Version</string>
    <string name="date">Date</string>
    <string name="file">File</string>
    <string name="md5">MD5</string>
    <string name="hit_refresh">Hit the Refresh button!</string>
    <string name="new_update">New Update:</string>
    <string name="current_is_latest">Current build is the latest!</string>
    <string name="fetching_build_status_text">Fetching build info from github</string>
    <string name="unable_to_fetch_details">Unable to fetch details, swipe down to try again</string>
    <string name="no_internet">No internet connection</string>
    <string name="notify_refresh_failed">Automatic update check failed</string>
    <string name="notify_refresh_failed_desc">Please check for updates manually</string>
    <string name="notify_new_update">New system update detected</string>
    <string name="notify_new_update_desc">Install the update for a better experience</string>

    <!-- Local Upgrade -->
    <string name="local_upgrade">Local Upgrade</string>
    <string name="confirm_selection">Confirm selection</string>

    <!-- Download -->
    <string name="download">Download</string>
    <string name="starting_download">Starting download</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="resume">Resume</string>
    <string name="waiting">Waiting...</string>
    <string name="downloading">Downloading</string>
    <string name="download_paused">Download paused</string>
    <string name="download_failed">Download failed</string>
    <string name="download_finished">Download finished</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="numeric_download_progress_text_default">0/0 MB</string>
    <string name="delete_file">Delete downloaded file?</string>
    <string name="unable_to_delete">Unable to delete downloaded file</string>
    <string name="file_not_found">Zip file not found</string>
    <string name="checking_md5">Verifying md5</string>
    <string name="invalid_url">URL parsed from json is invalid</string>
    <string name="database_corrupt">Application database is corrupt</string>
    <string name="check_logs">Check logs for error details</string>
    <string name="click_to_update">Click here to proceed with update installation</string>
    <string name="copy_failed">Copy to Downloads failed</string>
    <string name="md5_check_failed">Md5 verification failed, file is corrupt</string>

    <!-- Updater -->
    <string name="update">Update</string>
    <string name="applying_update">Applying Update</string>
    <string name="processing_payload">Processing payload</string>
    <string name="update_paused">Update paused</string>
    <string name="update_finished">Update finished</string>
    <string name="update_failed">Failed to apply update</string>
    <string name="invalid_zip_file">Not a valid zip file</string>
    <string name="step">Step</string>
    <string name="reboot">Reboot</string>
    <string name="sure_to_reboot">Are you sure you want to reboot?</string>
    <string name="post_update_tips">
        Update is now complete, next reboot will be to the updated slot.
        Now is a really good time to go ahead and flash magisk to the new slot.
        If you don\'t have magisk installed or don\'t care about losing magisk after update then hit the reboot button
    </string>
    <string name="metadata_verification_failed">Metadata verification failed</string>
    <string name="payload_transfer_error_retry">Payload transfer error, please retry</string>
    <string name="attempting_downgrade">Attempt to downgrade system denied</string>
    <string name="ota_transfer_error">OTA transfer error, retry</string>
    <string name="rootfs_verification_failed">New rootfs verification error, you may retry</string>
    <string name="copying">Copying file to internal directory</string>
    <string name="do_not_close">Please do not close the app until this is over</string>
    <string name="update_in_progress">OTA update is running</string>

    <!-- Updater Settings -->
    <string name="updater_settings_title">Updater Settings</string>
    <string name="theme_settings_title">Theme</string>
    <string name="theme_settings_summary">Select theme for the app</string>
    <string name="theme_chooser_dialog_title">Select theme</string>
    <string name="download_location_preference_title">Select download location</string>
    <string name="download_location_preference_summary">Choose a different location (default /sdcard/Download) to store downloaded zips</string>
    <string name="refresh_interval_settings_title">Update check interval (days)</string>

</resources>
